--- a/Creative-Thinking/module2_toolkit2.html
+++ b/Creative-Thinking/module2_toolkit2.html
@@ -22,6 +22,20 @@
             background-color: #F8F7F4;
             color: #3D405B;
         }
+        .back-link-top {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            color: #3D405B;
+            font-weight: 600;
+            text-decoration: none;
+            padding: 0.5rem 1rem;
+            transition: background 0.2s, color 0.2s;
+        }
+        .back-link-top:hover {
+            background: #F2CC8F;
+            color: #E07A5F;
+        }
         .nav-link {
             transition: color 0.3s ease;
         }
@@ -89,7 +103,14 @@
     <header class="bg-white/80 backdrop-blur-md shadow-sm sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-3">
             <div class="flex justify-between items-center">
+                 <a href="creative-thinking-hub.html" class="back-link-top rounded-lg flex-shrink-0">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd" d="M9.707 16.707a1 1 0 01-1.414 0l-6-6a1 1 0 010-1.414l6-6a1 1 0 011.414 1.414L5.414 9H16a1 1 0 110 2H5.414l4.293 4.293a1 1 0 010 1.414z" clip-rule="evenodd" />
+                </svg>
+                Back to Home
+                </a>
                 <a href="#" class="text-xl font-bold text-[#3D405B]">Creative Collaboration Insights</a>
+                
                 <div class="hidden md:flex space-x-8">
                     <a href="#evaluation" class="nav-link">Evaluation</a>
                     <a href="#bias" class="nav-link">Bias</a>
